package utn.frre.lab2;

import java.time.Period;

public interface ICalculable {
    float getCost();
    Period getDuration();
}
