@startuml

title __LAB2's Class Diagram__\n

  package utn.frre.lab2 {
    class Hito {
        + Hito()
    }
  }
  

  package utn.frre.lab2 {
    interface ICalculable {
        {abstract} + getCost()
        {abstract} + getDuration()
    }
  }
  

  package utn.frre.lab2 {
    class Programmer {
        + getCost()
        + Programmer()
    }
  }
  

  package utn.frre.lab2 {
    class Project {
        - description : String
        + Project()
        + getCost()
        + getDuration()
        + toString()
    }
  }
  

  package utn.frre.lab2 {
    class ProjectCustomException {
        + ProjectCustomException()
    }
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  package utn.frre.lab2 {
    abstract class Resource {
        # id : int
        # name : String
        # cost : float
        + getId()
        + getName()
        {abstract} # getCost()
        + Resource()
    }
  }
  

  package utn.frre.lab2 {
    class Summary {
        + Summary()
        + getCost()
        + getDuration()
        + toString()
    }
  }
  

  package utn.frre.lab2 {
    class Task {
        - resources : List<Resource>
        + addResources()
        + getResources()
        + Task()
        + setNextTask()
        + getCost()
        + getDuration()
        + toString()
    }
  }
  

  package utn.frre.lab2 {
    abstract class TaskBase {
        # id : int
        # name : String
        # startDate : Date
        # endDate : Date
        # progress : float
        + getId()
        + getName()
        + getStartDate()
        + getEndDate()
        + getProgress()
        + setProgress()
        + setNextTask()
        + getNextTask()
        + TaskBase()
        + hasNextTask()
        + equals()
        + hashCode()
    }
  }
  

  package utn.frre.lab2 {
    abstract class TaskGroup {
        + TaskGroup()
        # closeTask()
    }
  }
  

  package utn.frre.lab2 {
    class TestProject {
        {static} + main()
    }
  }
  

  Hito -up-|> TaskBase
  Programmer -up-|> Resource
  Project -up-|> TaskGroup
  ProjectCustomException +-down- PrintStreamOrWriter
  ProjectCustomException +-down- SentinelHolder
  ProjectCustomException +-down- WrappedPrintStream
  ProjectCustomException +-down- WrappedPrintWriter
  Summary -up-|> TaskGroup
  Task -up-|> TaskGroup
  TaskBase o-- TaskBase : nextTask
  TaskGroup -up-|> ICalculable
  TaskGroup -up-|> TaskBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
